--- a/document_hosting/views/document_hosting_views.xml
+++ b/document_hosting/views/document_hosting_views.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright 2018 Rémy Taymans <remytaymans@gmail.com>
+     Copyright 2018 - Today Coop IT Easy SCRLfs (<http://www.coopiteasy.be>)
      License AGPL-3.0 or later (http://www.gnu.org/licenses/agpl).
 -->
 <odoo>
-  <data>
 
     <!-- Document form view -->
     <record id="view_form_document" model="ir.ui.view">
@@ -122,5 +121,4 @@
       </field>
     </record>
 
-  </data>
 </odoo>
